# onpeescraper

./: .gitignore  README.md  README_EXCEL_ANALYTICS.md  main.py  pyproject.toml  requirements.txt  test_append_votos.py  update_mesas_data_only.py
.github/: copilot-instructions.md
output/: agrupaciones.txt  mesas_data_new.txt  ubigeo_extranjero.txt  ubigeo_extranjero_lat_lon.txt  votos_new.txt
scripts/: extranjero_latlon.py  onpe_extranjero_export.py
source_data/: MesasFaltantes.txt  candidato.txt  todas_las_mesas.txt
src/onpe_scraper/: __init__.py  cli.py  scraper.py
